@@ -13,31 +13,18 @@
  */
 
 /**
- * This interface represents an object that can be sorted.
+ * This interface represents an object that can have an automatic configuration check.
  *
  * @package TYPO3
  * @subpackage tx_oelib
  *
  * @author Oliver Klee <typo3-coding@oliverklee.de>
  */
-interface tx_oelib_Interface_Sortable {
+interface Tx_Oelib_Interface_ConfigurationCheckable {
 	/**
-	 * Returns the sorting value for this object.
+	 * Returns the prefix for the configuration to check, e.g. "plugin.tx_seminars_pi1.".
 	 *
-	 * This is the sorting as used in the back end.
-	 *
-	 * @return int the sorting value of this object, will be >= 0
+	 * @return string the namespace prefix, will end with a dot
 	 */
-	public function getSorting();
-
-	/**
-	 * Sets the sorting value for this object.
-	 *
-	 * This is the sorting as used in the back end.
-	 *
-	 * @param int $sorting the sorting value of this object, must be >= 0
-	 *
-	 * @return void
-	 */
-	public function setSorting($sorting);
+	public function getTypoScriptNamespace();
 }
